# p2nix-dupes

./: flake.nix  pyproject.toml
