[tool.poetry]
name = "gitlab-pipelines"
version = "0.1.0"
description = "Template project for GitLab CI development"
authors = ["Richtman, Ariel <ariel.richtman@silverrailtech.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
httpie = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

